chore: :art: fix code redundent whitespaces

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -8,14 +8,15 @@
   width: 100%;
   height: 100%;
   background-color: transparent;
-  transition: backdrop-filter var(--modal-transition-duration, 250ms) ease-in, background-color var(--modal-transition-duration, 250ms) ease-in;
+  transition: backdrop-filter var(--modal-transition-duration, 250ms) ease-in,
+    background-color var(--modal-transition-duration, 250ms) ease-in;
   display: flex;
   justify-content: center;
   align-items: center;
   backdrop-filter: blur(px-to-rem(2));
 
   &[class*='ReactModal__Overlay--after-open'] {
-    background-color: hsl(var(--base)/20%);
+    background-color: hsl(var(--base) / 20%);
   }
 
   &[class*='ReactModal__Overlay--before-close'] {
@@ -26,11 +27,12 @@
 .modalContent {
   max-height: 80vh;
   overflow: hidden;
-  background-color: hsl(var(--white)/100%);
+  background-color: hsl(var(--white) / 100%);
   transform: scale(0.9);
   opacity: 0;
   border-radius: $borderRadiusHalf;
-  transition: transform var(--modal-transition-duration, 250ms) ease-in-out, opacity var(--modal-transition-duration, 250ms) ease-in-out;
+  transition: transform var(--modal-transition-duration, 250ms) ease-in-out,
+    opacity var(--modal-transition-duration, 250ms) ease-in-out;
 
   &[class*='ReactModal__Content--after-open'] {
     transform: scale(1);
